--- a/getaslot/templates/index.html
+++ b/getaslot/templates/index.html
@@ -138,7 +138,7 @@
 					<div class="offers">
 						<div class="offer">
 							<div class="oimg">
-								<img src="{{ STATIC_URL }}images/offer1.jpg" alt="Customize everything" />
+								<img src="{{ STATIC_URL }}images/offer1.png" alt="Customize everything" />
 							</div>
 							<div class="otxt">
 								<h2>Customize everything</h2>
@@ -151,7 +151,7 @@
 						</div>
 						<div class="offer">
 							<div class="oimg">
-								<img src="{{ STATIC_URL }}images/offer2.jpg" alt="Per-employee management and stats" />
+								<img src="{{ STATIC_URL }}images/offer2.png" alt="Per-employee management and stats" />
 							</div>
 							<div class="otxt">
 								<h2>Per-employee management and stats</h2>
@@ -163,7 +163,7 @@
 						</div>
 						<div class="offer">
 							<div class="oimg">
-								<img src="{{ STATIC_URL }}images/offer3.jpg" alt="Automated reminders" />
+								<img src="{{ STATIC_URL }}images/offer3.png" alt="Automated reminders" />
 							</div>
 							<div class="otxt">
 								<h2>Automated reminders</h2>
@@ -175,7 +175,7 @@
 						</div>
 						<div class="offer">
 							<div class="oimg">
-								<img src="{{ STATIC_URL }}images/offer4.jpg" alt="More to come" />
+								<img src="{{ STATIC_URL }}images/offer4.png" alt="More to come" />
 							</div>
 							<div class="otxt">
 								<h2>More to come</h2>
@@ -190,6 +190,10 @@
 						<a href="http://garage48.org/en" title="garage48"><img src="{{ STATIC_URL }}images/design/garage48.png" alt="garage48 logo" /></a>
 					</div>
 					<div class="clear"></div>
+					<div class="copyright">
+						<p><a href="/about/" title="About team">About team</a></p>
+					</div>
+					<div class="clear"></div>
 				</div>
 			</div>
 		</div>
@@ -198,5 +202,21 @@
 			
 		</div>
 	</div>
+	<script type="text/javascript">
+
+	 var _gaq = _gaq || [];
+	 _gaq.push(['_setAccount', 'UA-27163917-1']);
+	 _gaq.push(['_trackPageview']);
+
+	 (function() {
+	   var ga = document.createElement('script'); ga.type =
+	'text/javascript'; ga.async = true;
+	   ga.src = ('https:' == document.location.protocol ? 'https://ssl' :
+	'http://www') + '.google-analytics.com/ga.js';
+	   var s = document.getElementsByTagName('script')[0];
+	s.parentNode.insertBefore(ga, s);
+	 })();
+
+	</script>
 </body>
 </html>
