--- a/getaslot/templates/index.html
+++ b/getaslot/templates/index.html
@@ -88,7 +88,7 @@
 								<div class="container">
 									<form method="post" action="/subscribe/" id="subscribeForm">
 										<div class="inpt">
-											<input title="PLZ eingeben" type="text" name="subscribe" id="subscribe" value="Enter your email to get notified when we launch" onfocus="if(this.value=='Enter your email to get notified when we launch') this.value='';" onblur="if(this.value=='') this.value='Enter your email to get notified when we launch';" />
+											<input title="Subscribe" type="text" name="email" id="subscribe" value="Enter your email to get notified when we launch" onfocus="if(this.value=='Enter your email to get notified when we launch') this.value='';" onblur="if(this.value=='') this.value='Enter your email to get notified when we launch';" />
 											<a class="btn1" title="Subscribe" onclick="submitForm();" href="javascript:;"><span><span>Subscribe</span></span></a>
 										</div>
 										<div class="clear"></div>
