--- a/getaslot/site_media/media/css/style.css
+++ b/getaslot/site_media/media/css/style.css
@@ -12,7 +12,7 @@ ol, ul, dir, menu {
 	list-style: none;
 	list-style-type: none;
 }
-fieldset,img,abbr,acronym,input { 
+fieldset,img,abbr,acronym { 
 	border:0;
 	outline: 0;
 }
